[package]
name = "openpgp-smartcard"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]

[dependencies]
base64 = "0.13"
openpgp-card = "0.0.2"
openpgp-card-pcsc = "0.0.1"
